kube/clientes.yaml
apiVersion: v1
kind: Service 
metadata:
  name: clientes
  namespace: app
  labels:
    app: clientes
    service: clientes
spec:
  ports: 
  - port: 5000
    name: http
  selector:
    app: clientes
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: clientes-v1
  namespace: app
  labels:
    app: clientes
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: clientes
  template:
    metadata: 
      labels:
        app: clientes
        version: v1
    spec:
      containers:
        - name: clientes
          image: rxcore/clientes:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 50
            timeoutSeconds: 10
            failureThreshold: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clientes
  namespace: app
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 70
    route:
    - destination:
        host: clientes
        port:
          number: 5000
  - route:
    - destination:
        host: clientes
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: clientes
  namespace: app
spec:
  host: clientes
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 2
      interval: 1m
      baseEjectionTime: 3m
      maxEjectionPercent: 100
